[Feature #163406783] Added some interactions, and also fixed some layout bugs

--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ form input:first-child{
     margin: auto;
     color: white;
     background-color: green;
+    padding: 2%;
     font-family:sans-serif;
     text-align: center;
     font-size: 2rem;
